# threadline-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
benchmarks/: README.md  resume_bench.py
benchmarks/cases/demo/: facts.json  payload.md  transcript.md
benchmarks/cases/long/: facts.json  payload.md  transcript.md
benchmarks/cases/scattered/: facts.json  payload.md  transcript.md
docs/: example-event.json  protocol.md
src/threadline_core/: cli.py  config.py  db.py  mcp_server.py  models.py  protocol.py  rendering.py
src/threadline_core/api/: app.py  deps.py  routes_events.py  routes_projects.py
src/threadline_core/connectors/claude_code/: __init__.py  session_end.py  session_start.py
src/threadline_core/services/: connector_scaffold.py  daily.py  decisions.py  export.py  findings.py  fts.py  ingest.py  loop_classification.py  progress.py  project_state.py  sanitize.py  search.py  sessions.py
src/threadline_core/templates/fragments/: daily_note.html
src/threadline_core/utils/: ids.py  time.py
tests/: conftest.py  rc_mcp_harness.py  test_connector_scaffold.py  test_export.py  test_import_boundary.py  test_last_session_substantive.py  test_public_surfaces.py  test_sanitize_query.py  test_sanitize_query_hard.py
