[project]
name = "threadline-core"
version = "0.1.0"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
description = "Self-hosted AI work-continuity memory: protocol, storage, lifecycle, and MCP server."
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite",
  "pydantic>=2",
  "pydantic-settings",
  "typer",
  "mcp",
  "httpx",
  "jinja2",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
threadline-core               = "threadline_core.cli:app"
threadline-core-mcp           = "threadline_core.mcp_server:main"
threadline-core-session-start = "threadline_core.connectors.claude_code.session_start:main"
threadline-core-session-end   = "threadline_core.connectors.claude_code.session_end:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threadline_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
